test/invalid-syntax/60294_missing_colon_record/missing_colon_record.mag
-- Author: 60294, Pedro Rosa
const pt: {x = Int, y = Int} = {x=0, y=0}